--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+.metadata
+.sonarlint
+**/*.jar
+**/*.war
+**/*.ear
+**/*.class
+
+.idea
