--- a/microservice-assure.properties
+++ b/microservice-assure.properties
@@ -1,6 +1,8 @@
-server.name=msassure
+#server.name=msassure
+# server.port=9999
 
-server.port=9999
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/annuaire/
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -9,3 +11,4 @@ spring.datasource.username=ms_user
 spring.datasource.password=mdp
 
 urbanisationsi.clairprev.limiteNombreAssure=2
+
