--- a/microservice-annuaire.properties
+++ b/microservice-annuaire.properties
@@ -3,4 +3,4 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 
 eureka.server.enableSelfPreservation=false
-eureka.client.serviceUrl.defaultZone=http://localhost:9001/annuaire/
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
