--- a/microservice-assure.properties
+++ b/microservice-assure.properties
@@ -1,7 +1,7 @@
 #server.name=msassure
 # server.port=9999
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9001/annuaire/
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
