--- a/zuulservice.properties
+++ b/zuulservice.properties
@@ -5,3 +5,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
 #Spring Security
 spring.security.user.name=utilisateur
 spring.security.user.password=mdp
+
+logging.level.org.springframework.cloud.netflix.zuul=DEBUG
